Trival/TrivialJavaProgram/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\ATYP Fall Folder\Blue Jay\BlueJ Windows\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
D:\ATYP Fall Folder\Blue Jay\BlueJ Windows\lib\bluejcore.jar;D:\ATYP Fall Folder\Blue Jay\BlueJ Windows\lib\junit-4.8.2.jar;D:\ATYP Fall Folder\Blue Jay\BlueJ Windows\lib\userlib\pi4j-core.jar;D:\ATYP Fall Folder\Blue Jay\BlueJ Windows\lib\userlib\pi4j-device.jar;D:\ATYP Fall Folder\Blue Jay\BlueJ Windows\lib\userlib\pi4j-gpio-extension.jar;D:\ATYP Fall Folder\Blue Jay\BlueJ Windows\lib\userlib\pi4j-service.jar;D:\ATYP Fall Folder\Trival\TrivialJavaProgram
-d
D:\ATYP Fall Folder\Trival\TrivialJavaProgram\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
D:\ATYP Fall Folder\Blue Jay\BlueJ Windows\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\ATYP Fall Folder\Trival\TrivialJavaProgram\FacePrinter.java
<---- end of javadoc command ---->
Loading source file D:\ATYP Fall Folder\Trival\TrivialJavaProgram\FacePrinter.java...
Constructing Javadoc information...
D:\ATYP Fall Folder\Trival\TrivialJavaProgram\FacePrinter.java:5: error: cannot find symbol
 @author (Adrian_Heldt)
  ^
  symbol: class author
D:\ATYP Fall Folder\Trival\TrivialJavaProgram\FacePrinter.java:6: error: cannot find symbol
 @version (9-19-16)
  ^
  symbol: class version
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating D:\ATYP Fall Folder\Trival\TrivialJavaProgram\doc\FacePrinter.html...
javadoc: warning - Class author not found.
javadoc: warning - Class version not found.
javadoc: warning - Class author not found.
javadoc: warning - Class version not found.
javadoc: warning - Class author not found.
javadoc: warning - Class version not found.
javadoc: warning - Class author not found.
javadoc: warning - Class version not found.
javadoc: warning - Class author not found.
javadoc: warning - Class version not found.
javadoc: warning - Class author not found.
javadoc: warning - Class version not found.
Generating D:\ATYP Fall Folder\Trival\TrivialJavaProgram\doc\package-frame.html...
Generating D:\ATYP Fall Folder\Trival\TrivialJavaProgram\doc\package-summary.html...
javadoc: warning - Class author not found.
javadoc: warning - Class version not found.
Generating D:\ATYP Fall Folder\Trival\TrivialJavaProgram\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating D:\ATYP Fall Folder\Trival\TrivialJavaProgram\doc\allclasses-frame.html...
Generating D:\ATYP Fall Folder\Trival\TrivialJavaProgram\doc\allclasses-noframe.html...
Generating D:\ATYP Fall Folder\Trival\TrivialJavaProgram\doc\index.html...
Generating D:\ATYP Fall Folder\Trival\TrivialJavaProgram\doc\stylesheet.css...
16 warnings
